--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.2.2
   carousel_slider: ^5.0.0
   number_paginator: ^0.4.1
+  flutter_animate: ^4.5.0
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  shared_preferences: ^2.3.2
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
