--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   shared_preferences: ^2.3.2
   lottie: ^3.1.2
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
