--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.3.2
   lottie: ^3.1.2
   google_generative_ai: ^0.4.6
+  flutter_chat_ui: ^1.6.15
 
 dev_dependencies:
   flutter_test:
